--- a/index.html
+++ b/index.html
@@ -34,7 +34,24 @@
 </header>
 
 <main>
+<section class="container">
+    <div class="container_img">
+        <img src="images/team2.png" alt="">
+        <img src="images/team2.png" alt="">
+        <img src="images/team3.png" alt="">
+        <img src="images/team4.png" alt="">
 
+    </div> 
+
+    <div class="container_des">
+        <h3 class="dis_title"><span class="dis_title_part1">Quick list</span> <span class="dis_title_part2">of Our</span> <span class="dis_title_part3">Features</span></h3>
+        <p class="head_describtion">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form,
+             by injected humour, or randomised words which don't look even</p>
+        
+        <button class="primary">Explore More</button>
+
+    </div>
+</section>
 
 </main>
 
