--- a/index.html
+++ b/index.html
@@ -53,6 +53,38 @@
     </div>
 </section>
 
+<section>
+<div>
+    <h2 class="navtitle">Some Facts</h2>
+
+    <p class="head_describtion">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+</div>
+
+
+   <div class="cart_section">
+    <div class="cart">
+        <img src="images/icons/ribon.png" alt="">
+        <h3 class="cart_num">54</h3>
+        <p class="cart_name">Awards Winnings</p>
+    </div>
+    <div class="cart">
+        <img src="images/icons/projects.png" alt="">
+        <h3 class="cart_num">1458</h3>
+        <p class="cart_name">Project Finished</p>
+    </div>
+    <div class="cart">
+        <img src="images/icons/customers.png" alt="">
+        <h3 class="cart_num">590</h3>
+        <p class="cart_name">Clients Worked</p>
+    </div>
+    <div class="cart">
+        <img src="images/icons/email.png" alt="">
+        <h3 class="cart_num">22578</h3>
+        <p class="cart_name">Email Send</p>
+    </div>
+   </div>
+</section>
+
 </main>
 
 <footer>
