--- a/index.html
+++ b/index.html
@@ -52,8 +52,42 @@
 
     </div>
 </section>
-
 <section>
+    <div class="mid">
+        <div>
+            <h2 class="box_head_text">Features you will love & enjoy</h2>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+
+            <div>
+                <div class="box">
+                    <h2 class="mid_title">Dexktop & Mobile Version</h2>
+                    <p class="head_describtion">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="box">
+                    <h2 class="mid_title">Drag & Drop Builder</h2>
+                    <p class="head_describtion">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="box">
+                    <h2 class="mid_title">Awesome Modern Design</h2>
+                    <p class="head_describtion">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="box">
+                    <h2 class="mid_title">Super Easy to Edit</h2>
+                    <p class="head_describtion">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+
+
+        </div>
+        <div class="box_img">
+            <img src="images/architect.png" alt="">
+            <h2 class="experiance"><span class="first">10+Year</span><br><span class="secound">Experience</span></h2>
+
+        </div>
+    </div>
+</section>
+
+<section class="Facts">
 <div>
     <h2 class="navtitle">Some Facts</h2>
 
@@ -85,10 +119,31 @@
    </div>
 </section>
 
+ <section>
+    <div class="sponser_text">
+        <h2 class="navtitle">Our Sponspors</h2>
+        <p class="head_describtion">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+    </div>
+    <div class="sponsor_img">
+        <img src="images/sponsors/spotify.png" alt="">
+        <img src="images/sponsors/amazon.png" alt="">
+        <img src="images/sponsors/google.png" alt="">
+        <img src="images/sponsors/telerama.png" alt="">
+        <img src="images/sponsors/figma.png" alt="">
+       </div>
+ </section>
+ <section>
+    <div>
+        <p class="footer_text">All rights reserved copyright@2023 startup landing page design</p>
+       </div>
+ </section>
 </main>
 
 <footer>
 
+    
+        
+ 
 
 </footer>
 
